--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" type="text/css" href="css/style.css">
-<title>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Neil's first page</title>
+</head>
 <body>
-<h1> Panda Evolution</h1>
-<p> validate processes </p>
+	<h1> Panda Evolution</h1>
+	<p> validate processes </p>
+</body>
+</html>
